minor style improvements

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -17,6 +17,10 @@
   font-weight: normal;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 ::selection {
   background-color: var(--primary-color-dark);
 }
