--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -6,8 +6,8 @@
   --border-color-darker: #0d2538;
   /* --primary-color: #00835c;
   --primary-color-dark: #00a672; */
-  --primary-color: #FFD700;
-  --primary-color-dark: #E5C100;
+  --primary-color: #ffd700;
+  --primary-color-dark: #e5c100;
   --glow: 2px 2px 15px 0 #071521;
 }
 
@@ -35,11 +35,12 @@ body {
   background-color: var(--bg);
   touch-action: manipulation;
   width: 100%;
-  transition: background-color .3s;
+  transition: background-color 0.3s;
 }
 
 body {
-  font-family: 'Palatino Arabic', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: 'Palatino Arabic', -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue',
+    Arial, sans-serif;
   margin: 0;
   padding: 0;
   line-height: 1.5;
